# dota2learning

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg  travis.yml
data/db-production/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  dumb-db-production.sql  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
data/db-production/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
data/db-production/dota2learning@002ddb/: hero.ibd
data/db-production/mysql/: general_log_213.sdi  slow_log_214.sdi
data/db-production/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_statement_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  events_statement_127.sdi  events_statement_128.sdi  events_statement_129.sdi  events_statement_130.sdi  events_transacti_131.sdi  events_transacti_132.sdi  events_transacti_133.sdi  events_transacti_134.sdi  events_transacti_135.sdi  events_transacti_136.sdi  events_transacti_137.sdi  events_transacti_138.sdi  events_waits_cur_84.sdi  (+70 more)
data/db-production/sys/: sys_config.ibd
data/db-testing/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
data/db-testing/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
data/db-testing/mysql/: general_log_213.sdi  slow_log_214.sdi
dota2learning/: __main__.py  cli.py  config.py  database.py  settings.py  settings.toml  test_codes.py  test_drive.py
dota2learning/api/: opendota.py  urls.py
dota2learning/cli/: future_features.txt  hero.py  main.py
dota2learning/database/: connection.py  connections.py  create_table.py  create_tables.py  get_from_database.py  inserts.py
dota2learning/models/: hero_model.py
dota2learning/schemas/: hero_schema.py
dota2learning/sql/: create_table.py  insert_queries.py  select_queries.py
notebooks/: API.ipynb  api_testing.ipynb  database_testing.ipynb  test_api.ipynb
tests/api/: test_opendota.py
tests/cli/: test_hero.py
tests/database/: test_database.py
tests/test_api/: test_opendota.py
tests/test_cli/: test_hero.py
tests/test_database/: test_connections.py  test_create_tables.py  test_get_from_database.py  test_inserts.py
(+111 files in other folders)
