[tool.poetry]
name = "Dota2Learning"
version = "0.3.0"
description = "Statistics and Machine Learning for your Dota2 Games."
license = "MIT"
readme = "README.md"
homepage = "Coming soon..."
repository = "https://github.com/drigols/dota2learning/"
documentation = "Coming soon..."
include = ["CHANGELOG.md"]
authors = [
    "drigols <drigols.creative@gmail.com>",
]
maintainers = [
    "drigols <drigols.creative@gmail.com>",
]
keywords = [
    "dota2",
    "statistics",
    "machine Learning",
    "deep learning",
]

[tool.poetry.scripts]
dota2learning = "dota2learning.cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
mysql-connector-python = "^8.0.29"
typer = {extras = ["all"], version = "^0.4.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = {extras = ["jupyter"], version = "^22.3.0"}
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
reorder-python-imports = "^3.1.0"
pyupgrade = "^2.34.0"
coverage = "^6.4.1"

[tool.black]
line-length = 79
include = '\.pyi?$' # All Python files
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/drigols/dota2learning/issues"

[tool.pytest.ini_options]
markers = [
    # To run tests with this marks use: pytest -svv -m 'mark-name'.
    "get_names: Testing functions that get hero names from database.",
    "get_heroes_stats: Testing functions that get herostats from OpenDota API.",
    "connections: Testing for database connections",
    "create_table: Testing for create_table function",
    "insert: Testing for inserts queries",
]
